--- a/css/about.css
+++ b/css/about.css
@@ -71,6 +71,7 @@ body {
     font-size: 20px;
     padding-bottom: 20px;
     font-weight: normal;
+    line-height: 1.5;
 }
 
 ul {
@@ -89,4 +90,8 @@ h1 {
 
     font-family: 'Raleway', sans-serif;
     font-weight: 800; /* Assuming you want the heaviest weight for Raleway */
+}
+
+li{
+    line-height: 1.5;
 }
