--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -80,3 +80,16 @@ body {
     padding: 10px;
     text-align: left; /* Align cell text to the left */
 }
+
+.subheading, .subtext {
+    text-align: left;
+    padding-left: 10%;
+    font-weight: normal;
+}
+
+.subtext {
+    max-width: 80%;
+    font-size: 20px;
+    padding-bottom: 20px;
+    font-weight: normal;
+}
