--- a/css/prizes.css
+++ b/css/prizes.css
@@ -16,13 +16,14 @@ nav li {
     display: inline;
     margin: 15px;
     font-size: 20px;
-    font-weight: 700;
+    font-weight: 100;
 }
 
 nav a {
     text-decoration: none;
     color: black;
 }
+
 nav ul li {
     font-size : 18px;
     font-family: 'Raleway', sans-serif;
@@ -54,10 +55,6 @@ body {
     padding: 0;
 }
 
-.text-center {
-    text-align: center;
-}
-
 .heading {
     text-align: center;
     padding-bottom: 25px;
@@ -67,7 +64,6 @@ body {
     text-align: left;
     padding-left: 10%;
     font-weight: normal;
-    padding-right: 10%;
 }
 
 .subtext {
@@ -75,4 +71,23 @@ body {
     font-size: 20px;
     padding-bottom: 20px;
     font-weight: normal;
+    line-height: 1.5;
+}
+
+ul {
+    text-align: left;
+    padding-left: 13%;
+    padding-bottom: 20px;
+    max-width: 80%;
+    font-size: 20px;
+}
+h1 {
+
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800; /* Assuming you want the heaviest weight for Raleway */
+}
+.subheading {
+
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800; /* Assuming you want the heaviest weight for Raleway */
 }
